# gravitation-simulator

./: Cargo.toml  README.md  build-wasm.sh
src/: circle.wgsl  generic.wgsl  main.rs  physics.rs  render.rs
