[package]
name = "gravitation-simulator"
version = "1.0.0"
resolver = "2"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
console_log = "1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [ "Document", "Window", "Element" ] }

# [lib]
# crate-type = [ "cdylib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
num-bigfloat = "1.6.2"
pollster = "0.3.0"
raw-window-handle = { version = "0.5.2", features = ["std"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
wgpu = "0.17.0"
winit = "0.28.6"

[profile.release]
lto = true
opt-level = "z"
